--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14706,5 +14706,23 @@
         <target><![CDATA[Du kannst diese Aktion im Lernmodus nicht ausführen. <strong>Zuerst musst du noch etwas Spielerfahrung sammeln</strong>.<hr/>Klicke auf den Link bei Lernmodus, um diesen Modus zu deaktivieren.]]></target>
       </segment>
     </unit>
+    <unit id="PBjVCl0">
+      <segment>
+        <source>Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</source>
+        <target>Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</target>
+      </segment>
+    </unit>
+    <unit id="nwh92tP">
+      <segment>
+        <source>Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (&lt;strong&gt;{splimit} Seelenpunkte&lt;/strong&gt;). &lt;p&gt;Diese Städte sind den Veteranen vorbehalten.&lt;/p&gt;&lt;p&gt;Die entsprechenden Karten der entfernten Regionen sind &lt;strong&gt;weitaus größer&lt;/strong&gt; und es gibt mehr zu erforschen.&lt;/p&gt;</source>
+        <target><![CDATA[Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (<strong>{splimit} Seelenpunkte</strong>). <p>Diese Städte sind den Veteranen vorbehalten.</p><p>Die entsprechenden Karten der entfernten Regionen sind <strong>weitaus größer</strong> und es gibt mehr zu erforschen.</p>]]></target>
+      </segment>
+    </unit>
+    <unit id="N56WYSk">
+      <segment>
+        <source>Pandämoniumstädte sind &lt;strong&gt;weitaus schwieriger&lt;/strong&gt; als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.&lt;br /&gt;&lt;strong&gt;Du benötigst mindestens {splimit} Seelenpunkte&lt;/strong&gt;, um in diesen Städten spielen zu dürfen.</source>
+        <target><![CDATA[Pandämoniumstädte sind <strong>weitaus schwieriger</strong> als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.<br /><strong>Du benötigst mindestens {splimit} Seelenpunkte</strong>, um in diesen Städten spielen zu dürfen.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
