--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23096,5 +23096,35 @@
         <target><![CDATA[No puedes hacer eso en Modo Aprendizaje. <strong>Esta acción requiere una experiencia elevada en el juego</strong>.<hr/>Puedes desactivar el Modo Aprendizaje con el botón del mismo nombre.]]></target>
       </segment>
     </unit>
+    <unit id="PBjVCl0">
+      <notes>
+        <note category="german">Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</source>
+        <target>En este pueblo, la dificultad es reducida, pero no participa en la clasificación de la temporada. El tamaño del mapa es en promedio de 13x13.</target>
+      </segment>
+    </unit>
+    <unit id="nwh92tP">
+      <notes>
+        <note category="german">Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (&lt;strong&gt;{splimit} Seelenpunkte&lt;/strong&gt;). &lt;p&gt;Diese Städte sind den Veteranen vorbehalten.&lt;/p&gt;&lt;p&gt;Die entsprechenden Karten der entfernten Regionen sind &lt;strong&gt;weitaus größer&lt;/strong&gt; und es gibt mehr zu erforschen.&lt;/p&gt;</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (&lt;strong&gt;{splimit} Seelenpunkte&lt;/strong&gt;). &lt;p&gt;Diese Städte sind den Veteranen vorbehalten.&lt;/p&gt;&lt;p&gt;Die entsprechenden Karten der entfernten Regionen sind &lt;strong&gt;weitaus größer&lt;/strong&gt; und es gibt mehr zu erforschen.&lt;/p&gt;</source>
+        <target><![CDATA[Son pueblos a los que solo pueden acceder los jugadores con suficiente experiencia en el juego (<strong>{splimit} Puntos de Alma</strong> como mínimo).]]></target>
+      </segment>
+    </unit>
+    <unit id="N56WYSk">
+      <notes>
+        <note category="german">Pandämoniumstädte sind &lt;strong&gt;weitaus schwieriger&lt;/strong&gt; als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.&lt;br /&gt;&lt;strong&gt;Du benötigst mindestens {splimit} Seelenpunkte&lt;/strong&gt;, um in diesen Städten spielen zu dürfen.</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Pandämoniumstädte sind &lt;strong&gt;weitaus schwieriger&lt;/strong&gt; als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.&lt;br /&gt;&lt;strong&gt;Du benötigst mindestens {splimit} Seelenpunkte&lt;/strong&gt;, um in diesen Städten spielen zu dürfen.</source>
+        <target><![CDATA[¡Los pueblos de Pandemonio son famosos por ser <strong>mucho más difíciles que los demás</strong>!<br /><strong>Necesitas {splimit} Puntos de Alma</strong> como mínimo para entrar.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
