--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23067,5 +23067,35 @@ cette violente opération...]]></target>
         <target><![CDATA[Vous ne pouvez pas faire cela en mode apprentissage. En effet, <strong>cette action requiert une plus grande expérience du jeu</strong>.<hr/>Vous pouvez désactiver le mode apprentissage en cliquant sur lien du même nom.]]></target>
       </segment>
     </unit>
+    <unit id="PBjVCl0">
+      <notes>
+        <note category="german">Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Der Schwierigkeitsgrad ist in dieser Stadt geringer. Deswegen gilt sie nicht für das Saison-Ranking. Die Außenwelt ist durchschnittlich 13x13 Felder groß.</source>
+        <target>La difficulté du jeu est réduite sur cette ville, mais en contrepartie, elle ne participera pas au classement de la saison. La taille de la carte de l'Outre-Monde est en moyenne de 13x13.</target>
+      </segment>
+    </unit>
+    <unit id="nwh92tP">
+      <notes>
+        <note category="german">Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (&lt;strong&gt;{splimit} Seelenpunkte&lt;/strong&gt;). &lt;p&gt;Diese Städte sind den Veteranen vorbehalten.&lt;/p&gt;&lt;p&gt;Die entsprechenden Karten der entfernten Regionen sind &lt;strong&gt;weitaus größer&lt;/strong&gt; und es gibt mehr zu erforschen.&lt;/p&gt;</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Bei den entfernten Regionen handelt es sich um Städte, die nur von sehr erfahrenen Spielern gespielt werden dürfen (&lt;strong&gt;{splimit} Seelenpunkte&lt;/strong&gt;). &lt;p&gt;Diese Städte sind den Veteranen vorbehalten.&lt;/p&gt;&lt;p&gt;Die entsprechenden Karten der entfernten Regionen sind &lt;strong&gt;weitaus größer&lt;/strong&gt; und es gibt mehr zu erforschen.&lt;/p&gt;</source>
+        <target><![CDATA[Les régions éloignées sont des villes qui ne peuvent être rejointes que par des joueurs bénéficiant d'une expérience suffisante en jeu (<strong>{splimit} points d'âme</strong> minimum). <p>Elles regroupent donc des vétérans.</p><p>De plus, les cartes des régions éloignées sont <strong>bien plus vastes que les autres</strong> et permettent plus d'exploration.</p>]]></target>
+      </segment>
+    </unit>
+    <unit id="N56WYSk">
+      <notes>
+        <note category="german">Pandämoniumstädte sind &lt;strong&gt;weitaus schwieriger&lt;/strong&gt; als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.&lt;br /&gt;&lt;strong&gt;Du benötigst mindestens {splimit} Seelenpunkte&lt;/strong&gt;, um in diesen Städten spielen zu dürfen.</note>
+        <note category="from">db://TownClass</note>
+      </notes>
+      <segment>
+        <source>Pandämoniumstädte sind &lt;strong&gt;weitaus schwieriger&lt;/strong&gt; als normale Städte! Dementsprechend sind auch die Belohnungen und Gewinnmöglichkeiten besser.&lt;br /&gt;&lt;strong&gt;Du benötigst mindestens {splimit} Seelenpunkte&lt;/strong&gt;, um in diesen Städten spielen zu dürfen.</source>
+        <target><![CDATA[Les villes du Pandémonium sont réputées <strong>beaucoup plus difficiles que les autres</strong> !<br /><strong>Il vous faut {splimit} points d'âme</strong> minimum pour vous inscrire..]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
