--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3794,5 +3794,38 @@
         <target>Merci à</target>
       </segment>
     </unit>
+    <unit id="0inaYdi" name="Thread verschieben">
+      <notes>
+        <note category="german">Thread verschieben</note>
+        <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Thread verschieben</source>
+        <target>Thread verschieben</target>
+      </segment>
+    </unit>
+    <unit id="RDurDOj" name="Verschiebe den aktuellen Thread in ein anderes Forum:">
+      <notes>
+        <note category="german">Verschiebe den aktuellen Thread in ein anderes Forum:</note>
+        <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verschiebe den aktuellen Thread in ein anderes Forum:</source>
+        <target>Verschiebe den aktuellen Thread in ein anderes Forum:</target>
+      </segment>
+    </unit>
+    <unit id="IvUMWo7" name="Verschieben">
+      <notes>
+        <note category="german">Verschieben</note>
+        <note category="from">twig:///templates/ajax/forum/posts.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verschieben</source>
+        <target>Verschieben</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
