--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23197,5 +23197,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target><![CDATA[Hardcore towns are reputed to be <strong>much more difficult than others</strong>!<br /><strong>You need  at least {splimit} soul points</strong> to join these towns.]]></target>
       </segment>
     </unit>
+    <unit id="4rTfBdh">
+      <notes>
+        <note category="german">Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</note>
+        <note category="from">db://LogEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</source>
+        <target>A moderator has moved your thread "{threadname}" to the forum "{forumname}". {link_post}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
