--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23097,5 +23097,16 @@ cette violente opération...]]></target>
         <target><![CDATA[Les villes du Pandémonium sont réputées <strong>beaucoup plus difficiles que les autres</strong> !<br /><strong>Il vous faut {splimit} points d'âme</strong> minimum pour vous inscrire..]]></target>
       </segment>
     </unit>
+    <unit id="4rTfBdh">
+      <notes>
+        <note category="german">Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</note>
+        <note category="from">db://LogEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</source>
+        <target>Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
