--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -21727,7 +21727,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Du hast das Wasser aus {item} in den Brunnen geschüttet (&lt;strong&gt;+1 Einheit&lt;/strong&gt;)</source>
-        <target><![CDATA[Du hast das Wasser aus {item} in den Brunnen geschüttet (<strong>+1 Einheit</strong>)]]></target>
+        <target><![CDATA[You have transferred the water from the {item} to the well (<strong>+1 unit</strong>).]]></target>
       </segment>
     </unit>
     <unit id="IvzsLJB">
