--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -5779,5 +5779,35 @@
         <target><![CDATA[Du zündest eine Zigarette an. Der Rauch lässt dich kräftig Husten, vermutlich weil du daran nicht gewöhnt bist... Nach ein paar Minuten <strong>gelingt es dir dich zu beruhigen</strong>. Dieser Kurze Moment des Friedens ermöglicht lässt dich deinen Kummer vergessen und bringt dich zurück in die Wirklichkeit.<hr />Du drückst den Stummel auf dem Boden aus und bist bereit für einen weiteren Tag des Überlebens.!<t-consumed><hr />Dir fällt auf dass <strong>die Packung leer ist</strong>!</t-consumed><t-item-consumed><hr/>Das war dein <strong>letztes Streichholz</strong>... Es wird schwer sein, jetzt noch eine Zigarette anzuzünden.</t-item-consumed>]]></target>
       </segment>
     </unit>
+    <unit id="X33MW_7" name="Verbessert die Verteidigung">
+      <segment>
+        <source>Verbessert die Verteidigung</source>
+        <target>Verbessert die Verteidigung</target>
+      </segment>
+    </unit>
+    <unit id="xyibZX0" name="Verhindert Diebstähle">
+      <segment>
+        <source>Verhindert Diebstähle</source>
+        <target>Verhindert Diebstähle</target>
+      </segment>
+    </unit>
+    <unit id="wgXNSFv" name="Sieht schön aus, wenn es zu einer Girlande gebunden wird.">
+      <segment>
+        <source>Sieht schön aus, wenn es zu einer Girlande gebunden wird.</source>
+        <target>Sieht schön aus, wenn es zu einer Girlande gebunden wird.</target>
+      </segment>
+    </unit>
+    <unit id="eRtgtP5" name="Sie ist beängstigend.">
+      <segment>
+        <source>Sie ist beängstigend.</source>
+        <target>Macht mir Angst</target>
+      </segment>
+    </unit>
+    <unit id="K1aCREa" name="Macht Miau">
+      <segment>
+        <source>Macht Miau</source>
+        <target>Macht Miau</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
