--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9305,5 +9305,60 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target><![CDATA[You light a cigarette. The smoke makes you cough violently, no doubt because you're not used to it... After a few minutes, <strong>you manage to calm down</strong>. This brief moment of respite allows you to clear your mind a little and take stock of the situation.<hr />You crush the stub on the ground ready to fight for survival once more!<t-consumed><hr />You notice that <strong>the packet is empty</strong>!</t-consumed><t-item-consumed><hr/>That was your <strong>last match</strong>... It's going to be hard to light another cigarette now.</t-item-consumed>]]></target>
       </segment>
     </unit>
+    <unit id="X33MW_7" name="Verbessert die Verteidigung">
+      <notes>
+        <note category="german">Verbessert die Verteidigung</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verbessert die Verteidigung</source>
+        <target>Verbessert die Verteidigung</target>
+      </segment>
+    </unit>
+    <unit id="xyibZX0" name="Verhindert Diebstähle">
+      <notes>
+        <note category="german">Verhindert Diebstähle</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verhindert Diebstähle</source>
+        <target>Verhindert Diebstähle</target>
+      </segment>
+    </unit>
+    <unit id="wgXNSFv" name="Sieht schön aus, wenn es zu einer Girlande gebunden wird.">
+      <notes>
+        <note category="german">Sieht schön aus, wenn es zu einer Girlande gebunden wird.</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Sieht schön aus, wenn es zu einer Girlande gebunden wird.</source>
+        <target>Sieht schön aus, wenn es zu einer Girlande gebunden wird.</target>
+      </segment>
+    </unit>
+    <unit id="eRtgtP5" name="Sie ist beängstigend.">
+      <notes>
+        <note category="german">Macht mir Angst</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Sie ist beängstigend.</source>
+        <target>Sie ist beängstigend.</target>
+      </segment>
+    </unit>
+    <unit id="K1aCREa" name="Macht Miau">
+      <notes>
+        <note category="german">Macht Miau</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Macht Miau</source>
+        <target>Macht Miau</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
