--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9298,5 +9298,55 @@
         <target><![CDATA[Vous allumez une cigarette. La fumée vous fait violemment tousser, le manque d'habitude sans doute... Après quelques minutes, <strong>vous finissez par vous calmer</strong>. Ce petit moment de répit vous aide à faire le vide et à relativiser un peu sur votre sort.<hr />Vous écrasez le mégot au sol, de nouveau prêt(e) à en découdre !<t-consumed><hr />Dir fällt auf dass <strong>die Packung leer ist</strong>!</t-consumed><t-item-consumed><hr/>C'était votre <strong>dernière allumette</strong>... Ça va être coton de se griller une autre cigarette maintenant.</t-item-consumed>]]></target>
       </segment>
     </unit>
+    <unit id="X33MW_7" name="Verbessert die Verteidigung">
+      <notes>
+        <note category="german">Verbessert die Verteidigung</note>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Verbessert die Verteidigung</source>
+        <target>Augmente la défense</target>
+      </segment>
+    </unit>
+    <unit id="xyibZX0" name="Verhindert Diebstähle">
+      <notes>
+        <note category="german">Verhindert Diebstähle</note>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Verhindert Diebstähle</source>
+        <target>Empêche les vols</target>
+      </segment>
+    </unit>
+    <unit id="wgXNSFv" name="Sieht schön aus, wenn es zu einer Girlande gebunden wird.">
+      <notes>
+        <note category="german">Sieht schön aus, wenn es zu einer Girlande gebunden wird.</note>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Sieht schön aus, wenn es zu einer Girlande gebunden wird.</source>
+        <target>C'est joli, une fois attaché en guirlande.</target>
+      </segment>
+    </unit>
+    <unit id="eRtgtP5" name="Sie ist beängstigend.">
+      <notes>
+        <note category="german">Macht mir Angst</note>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Sie ist beängstigend.</source>
+        <target>Il fait peur.</target>
+      </segment>
+    </unit>
+    <unit id="K1aCREa" name="Macht Miau">
+      <notes>
+        <note category="german">Macht Miau</note>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Macht Miau</source>
+        <target>Il fait Miaou</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
