--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14730,5 +14730,11 @@
         <target>Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</target>
       </segment>
     </unit>
+    <unit id="d2ZHuaw" name="Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.">
+      <segment>
+        <source>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</source>
+        <target>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
