--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23137,5 +23137,16 @@
         <target>Ein Moderator hat deinen Thread "{threadname}" in das Forum "{forumname}" verschoben. {link_post}</target>
       </segment>
     </unit>
+    <unit id="d2ZHuaw" name="Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.">
+      <notes>
+        <note category="german">Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</source>
+        <target>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
