--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23218,5 +23218,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</target>
       </segment>
     </unit>
+    <unit id="jlgyITW">
+      <notes>
+        <note category="german">Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.</source>
+        <target>Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
