--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23148,5 +23148,15 @@
         <target>Deine aktuelle Situation erlaubt nicht, dass du diese Aktion durchführst.</target>
       </segment>
     </unit>
+    <unit id="jlgyITW">
+      <notes>
+        <note category="german">Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig</note>
+      </notes>
+      <segment>
+        <source>Dieser Bürger scheint völlig verängstigt zu sein! Er bringt keinen Kontrollpunkt in dieser Zone.</source>
+        <target>¡Este habitante parece estar totalmente aterrorizado! No ha reportado ningún punto de control.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
